[project]
name = "l-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "equinox>=0.13.2",
    "flax>=0.12.2",
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "jupyterlab>=4.5.1",
    "optax>=0.2.6",
    "ruff>=0.14.10",
]
